--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,8 @@ body{
 .about__menu{
 	border-bottom: 1px solid #f2f2f2;
 	height: 37px;
-	margin: 21px auto 0;
+	//margin: 21px auto 0;
+	padding: 21px auto 0;
 	font-family: 'Lato-Bold';
 	text-transform: uppercase;
 	font-size: 15px;
