--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,7 @@ body{
 .about__menu{
 	border-bottom: 1px solid #f2f2f2;
 	height: 37px;
-	//margin: 21px auto 0;
-	padding: 21px auto 0;
+	padding: 10px;
 	font-family: 'Lato-Bold';
 	text-transform: uppercase;
 	font-size: 15px;
